Fix for spacing

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header {
 	z-index: 20;
 	background: #000;
 	line-height: 22px;
-	padding: 28px 10px;
+	padding: 28px 10px 8px;
 	color: white;
 	text-align: center;
 	-webkit-box-sizing: border-box;
@@ -127,7 +127,7 @@ header img {
 	margin-right: 10px;
 }
 #schedule {
-	padding: 50px 15px 40px;
+	padding: 70px 15px 40px;
 }
 #schedule h1 {
 	margin: 0 0 10px;
@@ -144,7 +144,7 @@ header img {
 	color: #666;
 	padding-top: 20px;
 	position: fixed;
-	top: 30px;
+	top: 50px;
 	left: 15px;
 	right: 15px;
 	z-index: 10;
